Refactor(spot): 마이스팟 API 카운트/목록 분리
- GET /me → 카운트만 반환 (createdCount, bookmarkedCount)
- GET /me/created 제보한 젬 목록 API 분리
- MySpotsResponse에서 spots 목록 제거, MyCreatedSpotsResponse 신규 생성